# ROS_Project-Cleaning-Robot

./: CMakeLists.txt  README.md  package.xml
src/: turtle_prj_node.cpp
