<?xml version="1.0"?>
<package format="2">
  <name>turtle_prj</name>
  <version>0.0.0</version>
  <description>The turtle_prj package</description>  
  <maintainer email="joeljosej@gmail.com">joel</maintainer>  
  <license>TODO</license> 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
</package>
